--- a/lab-way.csproj
+++ b/lab-way.csproj
@@ -47,7 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Board.cs" />
-    <Compile Include="Cell.cs" />
+    <Compile Include="Cells.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
